[tool.poetry]
name = "testkeeper"
version = "0.1.0"
description = "用于调度测试任务，观测任务执行进度"
authors = ["chineseluo <848257135@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
TK = "testkeeper.client:entry"
TK = "testkeeper.client:entry"
testkeeper = "testkeeper.client:entry"
TestKeeper = "testkeeper.client:entry"


