[tool.poetry]
name = "testkeeper"
version = "0.1.0"
description = "用于调度测试任务，观测任务执行进度"
authors = ["成都-阿木木 <848257135@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
loguru = "^0.6.0"
requests = "^2.28.1"
psutil = "^5.9.4"
ddt = "^1.6.0"
pyyaml = "^6.0"
pydantic = "^1.10.2"
mkdocs = "^1.4.2"
python-crontab = "^2.6.0"
apscheduler = "^3.9.1"
prettytable = "^3.6.0"
pillow = "^9.4.0"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-script = "^2.0.6"
flask-wtf = "^1.1.1"
flask-jwt-extended = "^4.4.4"
email-validator = "^1.3.1"
pycryptodome = "^3.17"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
TK = "testkeeper.client:entry"
tk = "testkeeper.client:entry"
testkeeper = "testkeeper.client:entry"
TestKeeper = "testkeeper.client:entry"


[[tool.poetry.source]]
name = "aliyun"
url = "http://mirrors.aliyun.com/pypi/simple"
default = true